# juanjomendez96.github.io

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  index.html  main.py  pyproject.toml  run.py
.github/workflows/: deploy.yml  release.yml
assets/css/: main.css
assets/css/base/: _vars.sass
assets/js/: main.js
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  README.md
hooks/: commit-msg
i18n/: en.json  es.json
partials/: education.html  featured.html  footer.html  hero.html  languages.html  snapshot.html  toolbox.html
partials/en/: featured.html  services.html  snapshot.html
partials/es/: education.html  featured.html  footer.html  hero.html  languages.html  services.html  snapshot.html  toolbox.html
scripts/: commit_message_lint.py  update_changelog.py
